# amt-ontology

./: .gitattributes  .gitignore  Makefile  README.md  ontology_ui.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  graphs.py  im_cytoscape.py  im_diagram.py  labels.py  merge.py  namespaces.py  paths.py  properties.py  routes.py  trees.py  validation.py  view_csv.py  view_xlsx.py
ontology/: amt-ontology.owl  amtmeta.ttl  catalog-v001.xml  exhibitor_view.ttl  im.ttl  ind.ttl  ind_view.ttl  pc.ttl  product-categories-v1.owl  user-bridge-imts-exhibitor.owl  user-bridge-imts-visitor.owl  visitor_view.ttl
resources/: AMT Taxonomy - Product Interest Category.xlsx  IMTS Exhibitor Categories.csv  IMTS Visitor Categories.csv  imts_exhibitor_categories.csv  imts_visitor_categories.csv  model.json  model.md
scripts/: add_user_object_properties.py  compare_csv_diff.py  compare_json_rdf_models.py  csv_to_rdf.py  md_to_rdf.py  rdf_to_csv.py  update_object_property_range.py
shapes/: view-shapes.ttl
static/: browser.css  browser.js
templates/: index.html  ontology_browser.html
tests/: test_csv_export.py  test_merge.py  test_semantic_invariants.py  test_shacl_shapes.py  test_views_bridge.py  test_xlsx_export.py
